# matra-token-merger

./: .env.example  .gitignore  FLUX_Merger_Implementation_Plan.md  README.md  SECURITY.md  _regen_v5_1.py  _run_full_pipeline.py  _run_snapshot.py  _run_twap.py  _run_valuation.py  pyproject.toml
.github/workflows/: aiken.yml  python.yml
audit_pack/: MAINNET_RUNBOOK.md
audit_pack/2026-02-11/: allocations_flux.csv  allocations_summary.json  cross_check_report.json  funding_report.json  merge_report.json  twap_report.json
audit_pack/2026-02-12/: DEPRECATED.md  ELIGIBILITY_RULES.md  allocations_cmatra.csv  allocations_cmatra_summary.json  allocations_flux.csv  allocations_summary.json  funding_report_cmatra.json  merge_valuation.json  merge_valuation_cmatra.json  reserve_analysis.json  reserve_ledger.json  twap_report.json
audit_pack/2026-03-11/: allocations_cmatra.csv  allocations_cmatra_summary.json  funding_report_cmatra.json  merge_valuation_cmatra.json  rate_table_cmatra.json  reserve_ledger.json  twap_report.json
audit_pack/2026-04-14/: mainnet_validation_runbook.html  security_audit_report.html  smart_contract_audit.html
audit_pack/2026-04-19/: allocations_cmatra.csv  allocations_cmatra_summary.json  funding_report_cmatra.json  merge_valuation_cmatra.json  rate_table_cmatra.json  reserve_ledger.json
audit_pack/preprod/: rehearsal_state.json
audit_pack/preprod/data/: claim_index.json  red_team_results.json  test_allocations.csv
audit_pack/preprod/keys/: admin.json  test_000.json  test_001.json  (+18 more)
audit_pack/token_registry/: FLUX.json  cMATRA.json
delegation-rewards/: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
delegation-rewards/src/: calculate.ts  cli.ts  config.ts  distribute.ts  ledger.ts  mint.ts  snapshot.ts
delegation-rewards/tests/: calculate.test.ts  distribute.test.ts  ledger.test.ts  mint.test.ts  snapshot.test.ts
docs/: REDEMPTION_FRONTEND_ARCHITECTURE.md
onchain/claim_validator/: aiken.toml  plutus.applied-mainnet.json  plutus.json  verify_build.sh
onchain/flux_mint_policy/: README.md  aiken.toml  mint_policy.json  plutus.json  verify_build.sh
onchain/quarantine_validator/: README.md  aiken.toml  plutus.json  quarantine.mainnet.addr  quarantine.plutus  quarantine.preprod.addr  verify_build.sh
scripts/: admin-sweep-ceremony.sh  mainnet_canary.py  mint-ceremony-params.example.env  mint-ceremony.sh  preprod_chain_rehearsal.py  preprod_harness.py  preprod_setup.py  red_team.py  regen_v5_1_artifacts.py  sweep_params.env
services/: cosigner_api.py  defrag.py  pool_tip.py  surrender_api.py
services/deploy/: .env.cosigner.example  .gitignore  Dockerfile.cosigner  docker-compose.cosigner.yml  setup-cosigner.sh
tests/: conftest.py  test_admin_reclaim.py  test_allocations.py  test_api_clients.py  test_build_claim_index.py  test_build_claim_utxos.py  test_build_surrender_pool.py  test_cardano_utils.py  test_claim_flux_indexed.py  test_config.py  test_cross_check.py  test_defrag.py  test_e2e_pipeline.py  test_flux_merge_valuation.py  test_funding_calculator.py  test_mint_ceremony_datum_flag.py  test_nft_holders.py  test_nft_twap.py  test_pool_tip.py  test_process_surrender.py  test_rational_rates.py  test_reserve_ledger.py  test_snapshot_allocate.py  test_summary_json.py  test_surrender_api_chaining.py  test_surrender_api_tx_size.py  test_surrender_redeemer_index.py  test_sweep_helpers.py  test_twap_snapshot_pools.py
tools/: admin_reclaim.py  api_clients.py  build_claim_utxos_flux.py  build_flux_claim_index.py  build_surrender_pool.py  cardano_utils.py  claim_flux_indexed.py  config.py  cross_check_holders.py  flux_merge_valuation_int.py  funding_calculator.py  process_surrender.py  snapshot_allocate_flux.py  sweep_helpers.py  twap_snapshot_pools.py
(+6 files in other folders)
