[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cmatra-merger"
version = "0.1.0"
description = "cMATRA Token Merger — surrender pool + one-shot mint on Cardano"
requires-python = ">=3.10"
dependencies = [
    # pycardano 0.13+ drops the cbor2pure fallback and uses cbor2 natively.
    # Older 0.11/0.12 paths pull cbor2pure which then breaks against
    # cbor2 >= 5.5 (removed `CBORDecodeValueError` symbol cbor2pure
    # imports from at module load time).
    "pycardano>=0.13.0",
    "blockfrost-python>=0.6.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "cbor2>=5.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "responses>=0.24.0",
]

[tool.setuptools.packages.find]
include = ["tools*", "services*", "scripts*"]
exclude = ["audit_pack*", "onchain*", "tests*", ".github*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
