[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cmatra-merger"
version = "0.1.0"
description = "cMATRA Token Merger — surrender pool + one-shot mint on Cardano"
requires-python = ">=3.10"
dependencies = [
    "pycardano>=0.11.0",
    "blockfrost-python>=0.6.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "cbor2>=5.6.0",
    # cbor2pure is a transitive dep of pycardano's cbor module. cbor2pure
    # older than 5.7.2 hard-imports `CBORDecodeValueError` from `cbor2` at
    # module load time — that symbol no longer exists in cbor2 >= 5.5, so
    # any fresh install from PyPI explodes at `import pycardano`. Pin to
    # the cbor2 6.x-compatible cbor2pure (the floor was released to fix
    # exactly this regression).
    "cbor2pure>=5.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "responses>=0.24.0",
]

[tool.setuptools.packages.find]
include = ["tools*", "services*", "scripts*"]
exclude = ["audit_pack*", "onchain*", "tests*", ".github*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
