[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cmatra-merger"
version = "0.1.0"
description = "cMATRA Token Merger — surrender pool + one-shot mint on Cardano"
requires-python = ">=3.10"
dependencies = [
    # pycardano >= 0.19.0 added `cbor2pure` as a direct dep. The
    # cbor2pure package's __init__ hard-imports `CBORDecodeValueError`
    # from `cbor2`, but cbor2 >= 5.5 removed that symbol — so any
    # `import pycardano` on a fresh resolver explodes at module load.
    # Cap below 0.19 to stay on the pure-cbor2 dependency tree until
    # upstream drops cbor2pure or fixes the import shim.
    "pycardano>=0.13.2,<0.19.0",
    "blockfrost-python>=0.6.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "cbor2>=5.6.0,<6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "responses>=0.24.0",
]

[tool.setuptools.packages.find]
include = ["tools*", "services*", "scripts*"]
exclude = ["audit_pack*", "onchain*", "tests*", ".github*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
